workspace = { members = ["src/app"] }

[package]
name = "colorutils-rs"
version = "0.5.11"
edition = "2021"
description = "High performance utilities for color format handling and conversion."
readme = "README.md"
keywords = ["lab", "hsv", "xyz", "color", "colorspace"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/colorutils-rs"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/colorutils-rs"
repository = "https://github.com/awxkee/colorutils-rs"
exclude = ["*.jpg"]

[dependencies]
erydanos = "0.2.12"
half = "2.4.1"
num-traits = "0.2.19"

[features]
default = []
